SPCTR-3219: Fix: Testimonial - Removed unwanted margin when testimonial has single column (#3391)
* removed unwanted margin

* Updated margin for content

* Updated changelog

* resolved phpcs error

* resolved phpcs issue

--- a/src/blocks/testimonial/style.scss
+++ b/src/blocks/testimonial/style.scss
@@ -299,9 +299,4 @@
 			}
 		}
 	}
-
-	.uagb-tm__desc {
-		margin-left: 20px;
-		margin-right: 20px;
-	}
 }
